Bug 765471 - Mail Compact should on filling the disk clean up before alerting the user. r=Neil